<resources>
    <string name="app_name">Inter-Summer-W5</string>
    <string name="your_profile_link">Link your social media profile</string>
    <string name="email_text_view_description_text">Enter your Email ID</string>
    <string name="password_text_view_description_text">Type your password</string>
    <string name="password_edit_text_description_hint">password</string>
    <string name="retype_password_edit_text_description_hint">Retype your password</string>
    <string name="retype_password_hint">Retype your password</string>
    <string name="sign_up_button_description_text">SIGN UP</string>
    <string name="sign_up_ask_text_view_description_text">not register yet ?</string>
    <string name="sign_up_text_view_description_text">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_text_view_description_text">Forgot password ?</string>
    <string name="place_holder">Please input ...</string>
    <string name="image_view_description_text">logo</string>
    <string name="choose_text_view">or</string>
    <string name="w4_email_text_view_description_text">Email ID</string>
    <string name="facebook_button_description_text">Facebook</string>
    <string name="google_button_description_text">Google</string>
    <string name="sign_in_button_description_text">SIGN IN</string>
    <string name="w4_password_text_view_description_text">Password</string>
    <string name="ask_account_text_view_description_text">Don\'t have an account ?</string>
    <string name="register_now_text_view_description_text">Register now</string>
    <string name="register_title_text_view_description_text">Register to Music Festival</string>
    <string name="full_name_text_view_description_text">Full Name</string>
    <string name="back_button_image_button_description">back Button</string>
    <string name="phone_number_text_view_description">Phone Number</string>
    <string name="confirm_password_text_view_description_text">Confirm Password</string>
    <string name="register_button_description_text">Register</string>
    <string name="home_activity_title">Your Profile</string>
    <string name="change_password_text_view_description_text">Change your password</string>
    <string name="confirm_button_description_text">Confirm</string>
    <string name="policy_text_view_description_text"><![CDATA[By registering you agree to terms & conditions and private policy of the festival]]></string>
    <string name="log_in_fragment_incorrect_account_dialog_tittle">WARNING</string>
    <string name="log_in_fragment_incorrect_account_dialog_message">your username or password is incorrect</string>
    <string name="register_fragment_set_avatar_dialog_list_title">Set Avatar</string>
    <string name="register_fragment_choose_set_avatar_dialog_from_gallery">Gallery</string>
    <string name="register_fragment_choose_set_avatar_dialog_from_camera">Camera</string>
    <string name="image_title">Title</string>
    <string name="permission_denied_toast">permission denied</string>
    <string name="add_to_back_stack_key">add to back Stack</string>
    <string name="w5_item_number_of_like">%d like</string>
    <string name="w5_logo_image_view">logo_image_view</string>
    <string name="w5_image_view_picture">image_view_picture</string>
    <string name="w5_instagram">Instagram</string>
    <string name="w5_like_image_view">like_image_view</string>
    <string name="w5_comment_image_view">comment_image_view</string>
    <string name="w5_send_image_view">send_image_view</string>
    <string name="w5_user1">DavidDeGea01</string>
    <string name="w5_user2">LukeShaw23</string>
    <string name="w5_user3">HarryMaguire05</string>
    <string name="w5_user4">AaronWan-bissaka29</string>
    <string name="w5_user5">NemanjaMatic31</string>
    <string name="w5_user6">PaulPogba06</string>
    <string name="w5_user7">BrunoFesnandes18</string>
    <string name="w5_user8">MarcusRashford10</string>
    <string name="w5_user9">AnthonyMartial09</string>
    <string name="w5_user10">MasonGreenWood26</string>
    <string name="w5_description_1">It\'s so beautiful</string>
    <string name="w5_description_2">It\'s so elegant</string>
    <string name="w5_description_3">My car</string>
    <string name="w5_description_4">Is it cool enough?</string>
    <string name="w5_description_5">That is my car</string>
    <string name="w5_description_6">It seems to suit me</string>
    <string name="w5_description_7">It\'s so luxurious</string>
    <string name="w5_description_8">No caption</string>
    <string name="w5_description_9">it is really inexpensive</string>
    <string name="w5_description_10">Feeling good</string>
    <string name="w6_step_fragment_text_view" >Step %d</string>
    <string name="w6_next_text_view_next">Next</string>
    <string name="w6_next_text_view_skip">Skip</string>
    <string name="w6_image_view_in_home_fragment">image view in home fragment</string>
    <string name="w6_information_tab_name">INFORMATION</string>
    <string name="w6_another_tab_name">ANOTHER</string>
    <string name="w6_home_tab_name">HOME</string>
    <string name="w6_player_1">Anthony Martial</string>
    <string name="w6_player_2">Marcus Rashford</string>
    <string name="w6_player_3">Mason Greenwood</string>
    <string name="w6_player_4">Bruno Fernandes</string>
    <string name="w6_player_5">Paul Pogba</string>
    <string name="w6_player_6">Neimaja Matic</string>
    <string name="w6_player_7">Luke Shaw</string>
    <string name="w6_player_8">Harry Maguire</string>
    <string name="w6_player_9">Victor Lindelof</string>
    <string name="w6_player_10">Wan-Bissaka</string>
    <string name="w6_player_11">David De Gea</string>
    <string name="w6_position_Forward">FORWARD</string>
    <string name="w6_position_Midfield">MIDFIELD</string>
    <string name="w6_position_Defender">DEFENDER</string>
    <string name="w6_position_Goalkeeper">GOALKEEPER</string>
    <string name="w6_tab1_name">HOME</string>
    <string name="w6_tab2_name">INFO</string>
    <string name="w6_tab3_name">ANOTHER</string>
    <string name="week_7_menu_toolbar_database_text_view">Week 7 - Menu - Toolbar - Database</string>
    <string name="w7_button_text">Week 7</string>
    <string name="begin_week6_button_text">Week 6</string>
    <string name="w6_app_name">Week 6 - ViewPager - TabLayout</string>
    <string name="w4_app_name">Week 4 - Activity - Intent - Fragment</string>
</resources>
