<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/linear_layout_margin_left"
    android:layout_marginLeft="@dimen/linear_layout_margin_left"
    android:layout_marginEnd="@dimen/linear_layout_margin_right"
    android:layout_marginRight="@dimen/linear_layout_margin_right"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogoLoginFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/image_view_margin_to_top"
        android:contentDescription="@string/image_view_description_text"
        android:src="@drawable/festival_music" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/linear_layout_profile_link_margin_to_logo_image_view">

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="@dimen/profile_button_width"
            android:layout_height="@dimen/profile_button_height"
            android:layout_gravity="center"
            android:background="@drawable/bg_w4_button_profile"
            android:drawableStart="@drawable/ic_week4_facebook"
            android:drawableLeft="@drawable/ic_week4_facebook"
            android:gravity="center"
            android:paddingLeft="@dimen/profile_image_padding_to_left"
            android:text="@string/facebook_button_description_text"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonProfileText"
            android:textSize="@dimen/button_text_size"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="@dimen/profile_button_width"
            android:layout_height="@dimen/profile_button_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/facebook_button_margin_google_button"
            android:layout_marginLeft="@dimen/facebook_button_margin_google_button"
            android:background="@drawable/bg_w4_button_profile"
            android:drawableStart="@drawable/ic_week4_google"
            android:drawableLeft="@drawable/ic_week4_google"
            android:paddingLeft="@dimen/profile_image_padding_to_left"
            android:text="@string/google_button_description_text"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonProfileText"
            android:textSize="@dimen/button_text_size"
            tools:ignore="ButtonStyle,SmallSp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_view_to_profile_button"
        android:text="@string/choose_text_view"
        android:textSize="@dimen/w4_text_view_text_size" />

    <TextView
        android:id="@+id/tvSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w4_email_text_view_description_text"
        android:textSize="@dimen/w4_text_view_text_size" />

    <EditText
        android:id="@+id/edtSignInEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w4_edit_text_height"
        android:layout_marginTop="@dimen/edit_text_margin_to_text_view"
        android:autofillHints="no"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin_to_edit_text"
        android:text="@string/w4_password_text_view_description_text"
        android:textSize="@dimen/w4_text_view_text_size" />

    <EditText
        android:id="@+id/edtSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w4_edit_text_height"
        android:layout_marginTop="@dimen/edit_text_margin_to_text_view"
        android:autofillHints="@string/place_holder"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvSignInForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/text_view_margin_to_edit_text"
        android:text="@string/forgot_password_text_view_description_text"
        android:textSize="@dimen/w4_text_view_text_size"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/sign_in_button_margin_top"
        android:background="@drawable/bg_w4_button"
        android:enabled="false"
        android:text="@string/sign_in_button_description_text"
        android:textAllCaps="false" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/register_linear_layout_margin_to_sign_in_button"
        android:layout_marginBottom="@dimen/register_linear_layout_margin_to_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_account_text_view_description_text" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now_text_view_description_text" />
    </LinearLayout>
</LinearLayout>
