<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/begin_activity_margin_left"
    android:layout_marginRight="@dimen/begin_activity_margin_right"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:gravity="center"
        android:layout_height="@dimen/begin_item_height">

        <TextView
            android:layout_width="@dimen/begin_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/w6_app_name" />

        <Button
            android:layout_width="@dimen/begin_button_width"
            android:id="@+id/btnWeek6"
            android:text="@string/begin_week6_button_text"
            android:layout_height="@dimen/begin_button_height" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:gravity="center"
        android:layout_height="@dimen/begin_item_height">

        <TextView
            android:layout_width="@dimen/begin_text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_7_menu_toolbar_database_text_view" />

        <Button
            android:id="@+id/btnWeek7"
            android:layout_width="@dimen/begin_button_width"
            android:text="@string/w7_button_text"
            android:layout_height="@dimen/begin_button_height" />
    </LinearLayout>
</LinearLayout>