<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/title_margin_to_top"
        android:text="@string/home_activity_title"
        android:textColor="@color/colorTitleTextViewText"
        android:textSize="@dimen/title_text_view_text_size" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAvatarHome"
        android:layout_width="@dimen/avatar_image_view_width"
        android:layout_height="@dimen/avatar_image_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/avatar_image_view_margin_to_top"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/email_text_view_margin_to_choose_text_view"
        android:text="@string/full_name_text_view_description_text"
        android:textSize="@dimen/text_view_text_size" />

    <EditText
        android:id="@+id/edtHomeFullName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w4_edit_text_height"
        android:layout_marginTop="@dimen/length_edit_text_to_text_view"
        android:autofillHints="no"
        android:background="@drawable/bg_edit_text_non_selected"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_text_view_to_edit_text"
        android:inputType="textEmailAddress"
        android:text="@string/w4_email_text_view_description_text"
        android:textSize="@dimen/text_view_text_size"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/edtHomeEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w4_edit_text_height"
        android:layout_marginTop="@dimen/length_edit_text_to_text_view"
        android:autofillHints="no"
        android:background="@drawable/bg_edit_text_non_selected"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_text_view_to_edit_text"
        android:text="@string/phone_number_text_view_description"
        android:textSize="@dimen/text_view_text_size" />

    <EditText
        android:id="@+id/edtHomePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w4_edit_text_height"
        android:layout_marginTop="@dimen/length_edit_text_to_text_view"
        android:autofillHints=""
        android:background="@drawable/bg_edit_text_non_selected"
        android:inputType="number"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin_to_edit_text"
        android:text="@string/change_password_text_view_description_text" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/length_button_to_image_view_link_profile"
        android:width="@dimen/profile_button_width"
        android:height="@dimen/profile_button_height"
        android:textAllCaps="false"
        android:background="@drawable/bg_button"
        android:text="@string/confirm_button_description_text" />

</LinearLayout>
